--- a/templates/airstrikeBravoPortrait/src/less/airstrikeBravoPortrait.less
+++ b/templates/airstrikeBravoPortrait/src/less/airstrikeBravoPortrait.less
@@ -280,11 +280,6 @@
         .expand-collapse {
             display: none;
         }
-
-        .buy-container {
-            opacity: 1;
-            .scale(1);
-        }
     }
 
     .row {
@@ -342,9 +337,6 @@
         font-weight: bold;
         @width: 140px;
         width: @width;
-        .transition(all 0.4s ease-in-out);
-        opacity: 0;
-        .scale(0.8);
 
         img {
             .size(60px, @width);
@@ -489,6 +481,22 @@
 	}
 }
 
+
+.virtualGoods .item {
+
+    .buy-container {
+        .transition(all 0.4s ease-in-out);
+        opacity: 0;
+        .scale(0.8);
+    }
+
+    &.expanded {
+        .buy-container {
+            opacity: 1;
+            .scale(1);
+        }
+    }
+}
 
 // MODAL DIALOG
 // --------------------------------------------------
